Allow spaces in JMeter path names (apply work-round for Java bug 4496398)
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@684709 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 5835495b49e86b48be3d42cb89e07c32fc3fb7d6